fix monospace on safari

--- a/input.css
+++ b/input.css
@@ -93,7 +93,8 @@ body {
 			@apply mb-4 p-4 bg-base-900 rounded-md;
 		}
 		code {
-			@apply font-["monospace"] text-base;
+			font-family: monospace;
+			@apply text-base;
 		}
 	}
 }
